--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
-#CONFERENCING_NODE_URL=https://192.168.1.101
-CONFERENCING_NODE_URL=https://mcereijo-lab-pexconf.westeurope.cloudapp.azure.com
+CONFERENCING_NODE_URL=https://192.168.1.101
+#CONFERENCING_NODE_URL=https://mcereijo-lab-pexconf.westeurope.cloudapp.azure.com
 PORT=8080
